# synthesizer

./: .gitignore  3d-scatter.html  Butanol_data_S.csv  Cyclopentanone_data_S.csv  Datastructure.py  Ethanol_data_S.csv  GaussianProcess.py  GeometricTransfer.py  Isopropanol_data_S.csv  KRR.py  LICENSE.txt  Methanol_data_S.csv  MoleculeEncoder.py  PLQY.txt  PLQY_data.csv  Preprocessor.py  README.md  README.txt  Simulation.py  StokesShift.py  Synthesizer.py  Thumbs.db  areas.csv  ascii-art.txt  data.csv  data_objects.pkl  helpers.py  hype.py  max_PLQY_matrix.csv  min_FWHM_matrix.csv  model_3-Pentanone_S.csv  model_Acetone_S.csv  model_Butanol_S.csv  model_Butanol_contour_data.csv  model_Butanone_S.csv  model_Cyclopentanone_S.csv  model_Cyclopentanone_contour_data.csv  model_Ethanol_S.csv  model_Ethanol_contour_data.csv  model_Isopropanol_S.csv  (+22 more)
data/: AS_Pb_ratio_Cs_Pb_ratio_CyclopentanolTransfer.html  AS_Pb_ratio_Cs_Pb_ratio_None_Ethanol.html  AS_Pb_ratio_Cs_Pb_ratio_peak pos_Iso+Ace.html  AS_Pb_ratio_Cs_Pb_ratio_target_Ethanol_Methanol_Butanol_Propanol.html  AS_Pb_ratio_Cs_Pb_ratio_target_Ethanol_Methanol_Isopropanol.html  AS_Pb_ratio_Cs_Pb_ratio_target_Ethanol_Methanol_Isopropanol_Butanol_Propanol.html  AS_Pb_ratio_Cs_Pb_ratio_target_Ethanol_Methanol_Isopropanol_Butanol_Propanol_Cyclopentanone.html  AS_Pb_ratio_Cs_Pb_ratio_target_Methanol.html  AS_Pb_ratio_Cs_Pb_ratio_target_Methanol_Isopropanol_Butanol.html  AS_Pb_ratio_Cs_Pb_ratio_target_Methanol_Isopropanol_Butanol_Propanol.html  AntisolventProperties.csv  Perovskite_NC_synthesis_NH_240418.csv  Thumbs.db  (+3 more)
(+513 files in other folders)
